refactor of back-end controllers to services

--- a/src/classes/KanbanBoardController.cls
+++ b/src/classes/KanbanBoardController.cls
@@ -6,21 +6,16 @@ public with sharing class KanbanBoardController {
 
     @AuraEnabled
     public static List<KanbanColumn__c> getAllKanbanBoardColumns(Id currentId) {
-        return [SELECT Id, Name
-                FROM KanbanColumn__c
-                WHERE KanbanBoard__c = :currentId];
+        return new KanbanColumnService().getAllKanbanBoardColumns(currentId);
     }
 
     @AuraEnabled
     public static KanbanBoard__c getCurrentKanbanBoard(Id currentId) {
-        return [SELECT Id, Name
-                FROM KanbanBoard__c
-                WHERE Id = :currentId];
+        return new KanbanBoardService().getCurrentKanbanBoard(currentId);
     }
 
     @AuraEnabled
     public static List<KanbanBoard__c> getAllKanbanBoards() {
-        return [SELECT Id, Name
-                FROM KanbanBoard__c];
+        return new KanbanBoardService().getAllKanbanBoards();
     }
 }
