implemented js methods for hiding custom popovers

--- a/src/classes/KanbanCardController.cls
+++ b/src/classes/KanbanCardController.cls
@@ -19,4 +19,9 @@ public with sharing class KanbanCardController {
         return new KanbanCardService().copyKanbanCard(kanbanCard);
     }
 
+    @AuraEnabled
+    public static KanbanCard__c deleteKanbanCard(KanbanCard__c kanbanCard) {
+        return new KanbanCardService().deleteKanbanCard(kanbanCard);
+    }
+
 }
