--- a/src/classes/KanbanCardService.cls
+++ b/src/classes/KanbanCardService.cls
@@ -25,4 +25,23 @@ public class KanbanCardService {
         return KanbanCardRepository.deleteKanbanCard(kanbanCard);
     }
 
+    public KanbanFile__c addAttachmentRelatedToKanbanCard(Id kanbanCardId, String fileName, String base64file) {
+        ExternalServicesAPI.DropboxAPI dropboxAPI = new ExternalServicesAPI.DropboxAPI();
+        String base64Data = EncodingUtil.urlDecode(base64file, 'UTF-8');
+        HttpResponse addNewFileResponse = dropboxAPI.addNewFile(fileName, base64Data);
+        if (addNewFileResponse.getStatusCode() == 200) {
+            HttpResponse sharedLinkResponse = dropboxAPI.createSharedLink(fileName);
+            Map<String, Object> sharedLinkResonseData = (Map<String, Object>) JSON.deserializeUntyped(sharedLinkResponse.getBody());
+            String fileUrl = (String) sharedLinkResonseData.get('url');
+            KanbanFile__c kanbanFile = new KanbanFile__c(
+                    Name=fileName,
+                    FileUrl__c=fileUrl,
+                    KanbanCard__c=kanbanCardId
+            );
+            insert kanbanFile;
+            return kanbanFile;
+        }
+        return null;
+    }
+
 }
